# vrchat-emojianimated

./: AGENTS.md  README.md  authors.ts  index.html  package-lock.json  package.json
.github/workflows/: release.yml
src/: ipc.ts  main.ts  router.ts  state.ts  style.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/binaries/: README.md
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: analyze.rs  assemble.rs  dialogs.rs  download.rs  extract.rs  mod.rs
src/ui/: html.ts  progress.ts
src/views/: AnalysisView.ts  DownloadView.ts  DropView.ts  ExportView.ts  FitView.ts  OptionsView.ts  ReductionView.ts  View.ts
