[package]
name = "vrchat-emojianimated"
version = "0.1.0"
description = "Convert GIFs and videos into VRChat-compatible 1024x1024 sprite sheets"
authors = ["you"]
edition = "2021"

[lib]
name = "vrchat_emojianimated_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri          = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog  = "2"
tauri-plugin-shell   = "2"
tauri-plugin-opener  = "2"
serde          = { version = "1", features = ["derive"] }
serde_json     = "1"
image          = { version = "0.25", default-features = false, features = ["png"] }
tempfile       = "3"
reqwest        = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
zip            = { version = "2", default-features = false, features = ["deflate"] }
futures-util   = "0.3"
tokio          = { version = "1", features = ["fs", "io-util", "rt-multi-thread"] }
